# at-data-sandbox

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
src/config/: config.yaml  settings.py
src/data/: generator.py  models.py  validator.py
src/ui/: charts.py  components.py
tests/: test_generator.py  test_validator.py
