[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "at-data-sandbox"
version = "1.0.0"
description = "Interactive AT Data Generator & Explorer"
authors = [{name = "Stuart Smith", email = "stu2454@outlook.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
